--- a/4.DOM_practice/dom.html
+++ b/4.DOM_practice/dom.html
@@ -35,10 +35,21 @@
   <body>
     <section>
       <img src="img/avatar.png" alt="avatar" />
-      <!-- hello coment -->
+      <!-- hello com  ent -->
       <h1 id="brand">Dream Coding</h1>
       <h3>Don't forget to code your dream</h3>
     </section>
     <span>Hello World!</span>
+    <script>
+      const section = document.querySelector('section');
+      const h2 = document.createElement('h2');
+      
+      h2.setAttribute('class', 'title'); // <h2 class="title"></h2>
+      h2.textContent = 'This is title'; // <h2 class="title">This is title</h2>
+      
+      // section.appendChild(h2);
+      const h3 = document.querySelector('h3');
+      section.insertBefore(h2, h3);
+    </script>
   </body>
 </html>
