--- a/index.html
+++ b/index.html
@@ -15,6 +15,51 @@
     <meta property="OG:imgae" content="main image" />
     <link rel="stylesheet" href="./style.css" />
     <script src="./main.js" defer></script>
+    <script
+      src="https://kit.fontawesome.com/ab7fa61afd.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
-  <body></body>
+  <body>
+    <section class="list">
+      <header class="header">
+        <button class="header__saveBtn">
+          <i class="fa-solid fa-floppy-disk"></i>
+        </button>
+        <span class="header__title">Jaewoong ShoppingList</span>
+        <div>
+          <input type="checkbox" class="header__checkBox" />
+          <button class="header__resetBtn">
+            <i class="fa-solid fa-rotate-left"></i>
+          </button>
+        </div>
+      </header>
+      <ul class="items">
+        <li class="item__row">
+          <div class="item__left">
+            <input type="checkbox" class="item__left__checkBox" />
+            <span class="item__left__name">Egg</span>
+          </div>
+          <div class="item__middle">
+            <button class="item__middle__plusBtn">
+              <i class="fa-solid fa-plus"></i>
+            </button>
+            <span class="item__middle__count"></span>
+            <button class="item__middle__minusBtn">
+              <i class="fa-solid fa-minus"></i>
+            </button>
+          </div>
+          <button class="item__right__deleteBtn">
+            <i class="fa-solid fa-trash"></i>
+          </button>
+        </li>
+      </ul>
+      <footer class="footer">
+        <input type="text" class="footer__input" />
+        <button class="footer__button">
+          <i class="fa-solid fa-plus"></i>
+        </button>
+      </footer>
+    </section>
+  </body>
 </html>
