--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <button class="header__saveBtn">
           <i class="fa-solid fa-floppy-disk"></i>
         </button>
-        <span class="header__title">Jaewoong ShoppingList</span>
+        <h1 class="header__title">Jaewoong's ShoppingList</h1>
         <div>
           <input type="checkbox" class="header__checkBox" />
           <button class="header__resetBtn">
@@ -44,7 +44,7 @@
             <button class="item__middle__plusBtn">
               <i class="fa-solid fa-plus"></i>
             </button>
-            <span class="item__middle__count"></span>
+            <span class="item__middle__count">20</span>
             <button class="item__middle__minusBtn">
               <i class="fa-solid fa-minus"></i>
             </button>
