--- a/index.html
+++ b/index.html
@@ -34,26 +34,7 @@
           </button>
         </div>
       </header>
-      <ul class="items">
-        <li class="item__row">
-          <div class="item__left">
-            <input type="checkbox" class="item__left__checkBox" />
-            <span class="item__left__name">Egg</span>
-          </div>
-          <div class="item__middle">
-            <button class="item__middle__plusBtn">
-              <i class="fa-solid fa-plus"></i>
-            </button>
-            <span class="item__middle__count">20</span>
-            <button class="item__middle__minusBtn">
-              <i class="fa-solid fa-minus"></i>
-            </button>
-          </div>
-          <button class="item__right__deleteBtn">
-            <i class="fa-solid fa-trash"></i>
-          </button>
-        </li>
-      </ul>
+      <ul class="items"></ul>
       <footer class="footer">
         <input type="text" class="footer__input" />
         <button class="footer__button">
